test/Runner/errors/tests/MI/Test5.mi.js
mi("Suite", () => {
	mi("Suite 2", () => {})
});